--- a/W7/D1/TodoApp/Gemfile
+++ b/W7/D1/TodoApp/Gemfile
@@ -27,7 +27,11 @@ gem 'jbuilder', '~> 2.5'
 # gem 'redis', '~> 3.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-
+gem 'pry-rails'
+gem 'annotate'
+gem 'binding_of_caller'
+gem 'better_errors'
+gem 'faker'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
