--- a/W7/D1/TodoApp/package.json
+++ b/W7/D1/TodoApp/package.json
@@ -5,6 +5,7 @@
   "main": "./frontend/todo_redux.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "webpack",
     "webpack": "webpack --watch"
   },
   "keywords": [],
