--- a/W7/D1/TodoApp/Gemfile
+++ b/W7/D1/TodoApp/Gemfile
@@ -32,6 +32,7 @@ gem 'annotate'
 gem 'binding_of_caller'
 gem 'better_errors'
 gem 'faker'
+gem 'jquery-rails'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
