--- a/W7/D5/BenchBnB/package.json
+++ b/W7/D5/BenchBnB/package.json
@@ -1,7 +1,9 @@
 {
   "name": "BenchBnB",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "redux-thunk": "^2.2.0"
+  },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
   "main": "index.js",
