--- a/W8/D1/BenchBnB2/package.json
+++ b/W8/D1/BenchBnB2/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "BenchBnB",
+  "name": "BenchBnB2",
   "private": true,
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "redux-thunk": "^2.2.0"
+    "redux": "^3.7.2",
+    "webpack": "^3.6.0"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
@@ -12,8 +20,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -w"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
